fix(style): adjust dropdown styling on mobile view

--- a/src/assets/scss/components/topNav.scss
+++ b/src/assets/scss/components/topNav.scss
@@ -232,6 +232,10 @@ div.nav-component-container-offline1 {
     display: block;
   }
 
+  .ah-profile-link .dropdown__trigger .dropdown__body {
+    left: -115px;
+}
+
   .nav-component-container-online2 li{
     padding: 0 15px;
   }
